# marktex

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
marktex/: Cargo.toml
marktex-core/: Cargo.toml
marktex-core/src/: config.rs  lib.rs
marktex-core/tests/: golden.rs
marktex-core/tests/fixtures-multi/0001-heading-label/: answer.tex
marktex-core/tests/fixtures-multi/0002-heading-xref/: answer.tex  config.yaml
marktex-core/tests/fixtures-multi/0003-figure/: answer.tex
marktex-core/tests/fixtures-multi/0004-footnote/: answer.tex  inputs.txt
marktex-core/tests/fixtures-multi/0005-figure-relative-xref/: answer.tex  config.yaml
marktex-core/tests/fixtures/0002-heading/: answer.tex
marktex-core/tests/fixtures/0003-styles/: answer.tex  input.md
marktex-core/tests/fixtures/0004-inline-math/: answer.tex
marktex-core/tests/fixtures/0005-list/: answer.tex  input.md
marktex-core/tests/fixtures/0006-math/: answer.tex  input.md
marktex-core/tests/fixtures/0007-quotation/: answer.tex  input.md
marktex-core/tests/fixtures/0008-inline-code/: answer.tex  input.md
marktex-core/tests/fixtures/0009-code-block/: answer.tex  input.md
marktex-core/tests/fixtures/0010-complex-nesting/: answer.tex  input.md
marktex-core/tests/fixtures/0011-image/: answer.tex
marktex-core/tests/fixtures/0012-html-center/: answer.tex  input.md
marktex-core/tests/fixtures/0013-math-environment/: answer.tex  input.md
marktex/src/: cli.rs  config.rs  lib.rs  main.rs
marktex/tests/: cli_integration.rs  golden_cli.rs
(+39 files in other folders)
