[package]
name = "marktex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
marktex-core = { path = "../marktex-core" }

[dev-dependencies]
assert_cmd = "2"
datatest-stable = "0.3"
predicates = "3"
tempfile = "3"

[[test]]
name = "golden_cli"
harness = false
